2011-01-09  Minh Dao Tran  <dao@kr.tuwien.ac.at>

	* SATSolver.cpp: Remove X-Mas leftover casserole.

	* SATInstance.h: Add support for removing input for the next computation.
	* SATInstance.cpp: Likewise.

2011-01-06  Minh Dao Tran  <dao@kr.tuwien.ac.at>

	* Makefile.am: Add path so that RelSatSolver.h can be included.

	* SATSolver.h: Let the wrapper convert our models into
	BeliefStates format.
	* SATSolver.cpp: Likewise.

2011-01-05  Minh Dao Tran  <dao@kr.tuwien.ac.at>

	* SATSolver.cpp: We want to have all solutions.

	* SATInstance.h: Read dmcs' theory and convert it into internal
	clauses of relsat.
	* SATInstance.cpp: Likewise.

	* ClauseList.cpp (vRemoveBack): New method. Will be used
	later to refresh the SAT solver by removing
	constraints/facts/conflicts from the last call.
	* ClauseList.h: Likewise.

2011-01-04  Minh Dao Tran  <dao@kr.tuwien.ac.at>

	* SATSolver.h: Remove MQ, wait for MQGateway.
	* SATSolver.cpp: Likewise.

	* SATSolver.cpp: Fix . to -> of local_sig.

2011-01-03  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* SATSolver.h: Refactoring.

2010-12-22  Minh Dao Tran  <dao@kr.tuwien.ac.at>

	* SATSolver.cpp: Use local_sig as a member.
	* SATSolver.h: Likewise.

	* Makefile.am: Fix compiling problem when integrating relsat into
	dmcs.
	* SATInstance.h: Likewise.
	* BigNum.h: Likewise.

2010-12-20  Minh Dao Tran  <dao@kr.tuwien.ac.at>

	* SATSolver.h: Integrate dmcs stuff into relsat.
	* SATSolver.cpp: Likewise.

	* Makefile.am (librelsat_a_SOURCES): Temporarily comment out
	relsal lib.

2010-12-20  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* configure: Remove.

	* configure.ac: Use autoconf and automake for building relsat.
	* bootstrap.sh: Likewise.
	* Makefile.am: Likewise.

2010-12-19  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* configure: Creates a wrapper Makefile for librelsat.a.

2010-12-19  Minh Dao Tran  <dao@kr.tuwien.ac.at>

	* SATSolver.h: Add facilities to return models in the form of